--- a/swiper.html
+++ b/swiper.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class = "swiper-pagination"></div>
-            <div><input type="text" v-model = "msg"></div>
+            <!-- <div><input type="text" v-model = "msg"></div> -->
         </div>
     </template>
     <script>
